Additional theory on sensitivities

--- a/docs/MPM_errors_manuscript/Bibliography.bib
+++ b/docs/MPM_errors_manuscript/Bibliography.bib
@@ -245,3 +245,31 @@ year = {1998},
 abstract = {Book Description: This text/reference addresses the ever-increasing challenges of documenting population demographic changes, and will serve as a bridge from introductory ecology to both applied and theoretical demography. It emphasizes the analysis of population data taken from a wide variety of organisms, including terrestrial and aquatic plants and animals found in habitats from equatorial rain forests to the arctic tundra. The book also contains computer programs that are written in BASIC and include tools for population projection, matrix analysis using both sensitivity and elasticity, individual growth and survival models, and the analysis of size-frequency distributions. Key Features * Includes BASIC programs for analysis of capture-recapture data, matrices, growth models, size-frequency distribution, survival models, and many others * Contains worked examples from a wide range of animals and plants * Emphasizes actual data}, 
 keywords = {}}
 
+@Article{Caswell1996,
+author = {Caswell, H. }, 
+title = {{Second derivatives of population growth rate: Calculation and applications}}, 
+journal = {Ecology}, 
+volume = {77}, 
+issue = {3}, 
+pages = {870-879}, 
+year = {1996}, 
+abstract = {}, 
+doi = {10.2307/2265507}, 
+location = {}, 
+keywords = {}}
+
+
+@Article{McCarthy2008,
+author = {McCarthy, D. and Townley, S. and Hodgson, D. }, 
+title = {{On second order sensitivity for stage-based population projection matrix models}}, 
+journal = {Theoretical Population Biology}, 
+volume = {74}, 
+issue = {1}, 
+pages = {68-73}, 
+year = {2008}, 
+abstract = {}, 
+doi = {10.1016/j.tpb.2008.04.008}, 
+location = {}, 
+keywords = {}}
+
+
